@@ -34,8 +34,14 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'com.stripe:stripe-java:20.41.0'
+	// Required by Stripe's Event.GSON deserialization
+	implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+bootRun {
+    jvmArgs = ["--add-opens=java.base/java.net=ALL-UNNAMED"]
 }
